# AI-sports-arena

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: arena.yml
arena/: config.py  fees.py  ledger.py  pricing.py  reset_season.py  risk.py  run_week.py  settle.py  tools.py
arena/agents/: anthropic_agent.py  base.py  gemini_agent.py  openai_agent.py  runner.py
arena/kalshi/: client.py
arena/prompts/: system.md
config/: settings.yaml
data/: leaderboard.json  ledger.json
data/runs/: 2026-07-08T220812Z.json  2026-07-09T124901Z.json  2026-07-09T222335Z.json  2026-07-10T035128Z.json  2026-07-10T220518Z.json  2026-07-11T131002Z.json  2026-07-11T215128Z.json  2026-07-12T215325Z.json  2026-07-13T215831Z.json  2026-07-14T215912Z.json  2026-07-15T220235Z.json  2026-07-16T220448Z.json  2026-07-17T215516Z.json  2026-07-18T215240Z.json  2026-07-19T215442Z.json  2026-07-20T220110Z.json  2026-07-21T220437Z.json  2026-07-22T220446Z.json  2026-07-23T220517Z.json  2026-07-24T220548Z.json
data/weekly/: 2026-06-29.json  2026-07-02.json  2026-07-06.json
tests/: test_adapters.py  test_fees.py  test_kalshi_client.py  test_pricing.py  test_risk_ledger.py  test_runner_force_bet.py  test_settle_tools.py  test_signing.py
web/: index.html
