[project]
name = "ai-sports-arena"
version = "0.1.0"
description = "LLM sports-betting competition on Kalshi: Claude vs GPT vs Gemini with a shared prompt, shared tools, and hard-coded risk limits."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "cryptography>=42.0",
    "PyYAML>=6.0",
    "anthropic>=0.50",
    "openai>=1.60",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["arena*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
